--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ addthis_public_id: # AddThis sharing plugin. See http://www.addthis.com/
 
 paths:
   home: /
-  커리큘럼: /
+  software: /
   repository: /repository/
   download: /download/
   forum: /forum/
