한국어추가

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -24,7 +24,7 @@ en: &en
   show_author: 'Show Author'
   show_comments: 'Show Comments'
   show_license: 'Show License'
-  software: '커리큘럼'
+  software: 'software'
   repository: 'Repository'
   download: 'Download'
   forum: 'Forum'
@@ -34,33 +34,33 @@ en: &en
 ko:
   about: 'About'
   articles: 'Articles'
-  back_to_top: 'Back to Top'
-  categories: 'Categories'
-  close: 'Close'
+  back_to_top: '맨 위로'
+  categories: '카테고리'
+  close: '닫기'
   copyright: '<p><small>Theme <a href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> developed by <a href="http://yizeng.me" target="_blank">Yi Zeng</a>, powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.</small></p>'
-  last_updated: 'Last updated'
-  menu: 'Menu'
+  last_updated: '최종 업데이트''
+  menu: '메뉴'
   more: 'More'
   next_post: 'Next Post'
   notice_no_js: 'This site requires JavaScript. Here are the instructions <a href="http://www.enable-javascript.com/" target="_blank">how to enable JavaScript in your web browser</a>.'
   notice_old_ie: 'You are using an outdated browser.'
   page_404_content: 'You will be redirected to <a href="/">homepage</a> in few seconds.'
-  page_404_heading: 'Sorry, the page is not found.'
+  page_404_heading: '죄송합니다, 페이지를 찾을 수 없습니다.'
   published: 'Published'
   redirecting: 'Redirecting...'
-  search: 'Search'
+  search: '검색'
   search_not_found: '<small>Nothing found :(</small>'
-  search_placeholder: 'Search...'
-  search_results: 'Search results'
+  search_placeholder: '검색...'
+  search_results: '검색 결과'
   share_post: 'Share Post:'
   show: 'Show'
   show_author: 'Show Author'
   show_comments: 'Show Comments'
   show_license: 'Show License'
-  software: '교육'
+  software: '교육과정'
   repository: 'Repository'
-  download: 'Download'
-  forum: 'Forum'
+  download: '다운로드'
+  forum: '포럼'
   tags: 'Tags'
   view: 'View'
 en-us:
