--- a/_config.yml
+++ b/_config.yml
@@ -54,5 +54,6 @@ addthis_public_id: # AddThis sharing plugin. See http://www.addthis.com/
 paths:
   home: /
   software: /
+  repository: /repository
   download: /download/
   forum: /forum/
