--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,8 @@ author:
       url:  https://www.youtube.com/user/BYROBOTCO
     - name: github
       url:  https://github.com/byrobot
+    - name: discord
+      url:  https://discord.gg/UVVJMye
 blog:
   cc_license: https://creativecommons.org/licenses/by-sa/4.0/
   cc_license_image: /assets/images/theme/cc-by-sa.png
@@ -53,7 +55,6 @@ addthis_public_id: # AddThis sharing plugin. See http://www.addthis.com/
 
 paths:
   home: /
-  software: /
-  repository: /repository
+  edu: /edu/
   download: /download/
   forum: /forum/
